--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,10 @@ fieldset {
   background: none;
 }
 
+.js-pin > * {
+  pointer-events: none;
+}
+
 .map__pin:focus {
   outline: none;
   -webkit-filter: drop-shadow(0 0 5px red);
